Fixes to styling on Mobile

--- a/src/scss/Plugins/Community/settingsSearch.scss
+++ b/src/scss/Plugins/Community/settingsSearch.scss
@@ -8,6 +8,11 @@
 	.settings-search-input {
 		padding: unset;
 		margin: var(--size-4-1);
+
+		.is-mobile.is-phone & {
+			padding: unset;
+			margin: var(--size-4-1);
+		}
 	}
 
 	.search-input-container::before {
