--- a/src/scss/Plugins/Theme/focusedMode.scss
+++ b/src/scss/Plugins/Theme/focusedMode.scss
@@ -11,7 +11,8 @@ body.pt-focused-mode {
 		.workspace-split.mod-horizontal.mod-left-split,
 		.workspace-split.mod-horizontal.mod-right-split,
 		.workspace-ribbon.mod-left.is-collapsed,
-		.workspace-ribbon.mod-right.is-collapsed {
+		.workspace-ribbon.mod-right.is-collapsed,
+		.mobile-navbar {
 			opacity: var(--fade-away-opacity);
 			transition: opacity 250ms;
 			transition-delay: var(--fade-away-delay);
