--- a/src/scss/User Interface/Bars/titleBar.scss
+++ b/src/scss/User Interface/Bars/titleBar.scss
@@ -7,3 +7,7 @@ body.pt-titlebar-hide-text .titlebar .titlebar-text {
 	color: hsl(0 100% 100%);
 	background-color: #C42B1C;
 }
+
+.is-hidden-frameless:not(.is-fullscreen) .titlebar-button-container.mod-right {
+	background-color: unset;
+}
